# kineircd

CVSROOT/: cvsignore  loginfo
home/CVSROOT/: config  cvsignore  loginfo  modules  passwd
home/kineircd/: .cvsignore  INSTALL  LICENSE  Makefile.am  Makefile.bs  README  Rules.make.in  configure.ac
home/kineircd/OLD/: Makefile.in.was  channel.cpp.was  channel.h.was  example.conf  handler.h.was  irc2user.cpp  irc2user.h  localuser.h.was  operator.h.was  remotes.cpp  server.cpp.was  server.h.was  user.cpp.was  user.h.was  whowas.h.was
home/kineircd/OLD/install/: .cvsignore  README  example.conf.tpl  ircd.8.in  ircd.conf.5.in
home/kineircd/config/: .cvsignore  README  acconfig.h  aclocal.m4  automake.inc
home/kineircd/doc/: Exit_Numerics  IIRC  LANGUAGE  LanguageTags  New_Numerics  README.developers  Security  Server_Notices  VersionChars  modes
home/kineircd/include/: .cvsignore  README
home/kineircd/include/kineircd/: .cvsignore  README  channel.h  channelname.h  client.h  clientname.h  config.h.in  config.h.tpl  connection.h  daemon.h  denizen.h  entity.h  errors.h.tpl  events.h.tpl  irc3user.h  kineircdconf.h.in  lang.h  language.h  languagedata.h  languagelist.h  languages.h  listener.h  listenerlist.h  localuser.h  logger.h.tpl  loggerconfig.h  modes.h  module-extension.h  module-protocol.h  module-service.h  module.h  moduledescriptor.h  modulelist.h  mynetwork.h  myserver.h  name.h  network.h  p14server.h  password.h  protocol.h  (+19 more)
home/kineircd/include/kineircd/libclbp/: input.h  output.h  protocol.h
home/kineircd/include/kineircd/libirc2/: input.h  library.h  modes.h  numerics.h.tpl  output.h  protocol.h  user.h  utility.h
home/kineircd/include/kineircd/libsoftchan/: channel.h
home/kineircd/include/kineircd/protocol/: base.h  input.h  output.h  protocol.h
home/kineircd/src/: .cvsignore  Makefile.am  README  config.cpp  irc3user.cpp  langtags.gen  modes.cpp  objects.cpp  p14server.cpp  socket.cpp  threads.cpp  vworld.cpp
home/kineircd/src/lib/: .cvsignore  README  channel.cpp  chantypes.cpp.tpl  charconv.h  client.cpp  connection.cpp  constants.h  daemon.cpp  debug.cpp  debug.h  errors.cpp.tpl  langtags.def  langtags.tpl  language.cpp  logger.cpp.tpl  loggerconfig.cpp.tpl  mynetwork.cpp  myserver.cpp  myserver.h  name.cpp  network.cpp  protocol.cpp  registry.cpp  registry.h  regnumerics.h.tpl  server.cpp  servernotice.cpp  sha1.cpp  signals.cpp  todo.cpp  user.cpp  utils.cpp  version.cpp.tpl  version.txt
home/kineircd/src/lib/config/: README  config.cpp.tpl  defaults.h  defs.cpp  handlerhelp.h  handlers.cpp  oldconfig.cpp  vars.cpp
home/kineircd/src/lib/language/: .cvsignore  config.cpp  config.h  data.cpp  interface.cpp  list.cpp  subst.cpp.tpl  subst.h
home/kineircd/src/lib/listener/: config.cpp  config.h  list.cpp  listener.cpp
home/kineircd/src/lib/modules/: descriptor.cpp  list.cpp  modules.cpp
home/kineircd/src/lib_clbp/: input.cpp  output.cpp  protocol.cpp
home/kineircd/src/lib_irc2/: .cvsignore  README  common.cpp  input.cpp  lang.h  library.cpp  messaging.cpp  output.cpp  protocol.cpp  servermodes.cpp.tpl  stats.cpp  stats.h  utility.cpp
home/kineircd/src/mod_channellog/: README  channellog.cpp  channellog.h  config.cpp  config.h  module.cpp  module.h
home/kineircd/src/mod_filelog/: README  config.cpp  config.h  filelog.cpp  filelog.h  module.cpp  module.h
home/kineircd/src/mod_irc2registrar/: .cvsignore  debug.h  module.cpp  module.h  protocol.cpp  protocol.h  protocolinfo.h
home/kineircd/src/mod_irc2user/: .cvsignore  README  access.cpp  access.h  commandlist.cpp.tpl  commands.cpp  commands.def  commands.h.tpl  handlers.cpp  isupport.cpp  isupport.h  lang.h  language.tpl  messaging.cpp  module.cpp  module.h  numerics.cpp.tpl  protocol.cpp  protocol.h  protocol.h.tpl  protocolinfo.h  scheme.cpp  scheme.h  schemesubs.def  schemesubs.tpl  snotices.def  user.cpp  user.h
home/kineircd/src/mod_syslog/: README  config.cpp  config.h  module.cpp  module.h  syslog.cpp.tpl  syslog.h
kineircd/autogen/: chanmembers.def  chanmodes.def  chantypes.def  config.def  config.scm  errors.def  events.def  irc2numerics.def  language.def  language.tpl  servermodes.def  usermodes.def  version.def
kineircd/doc/: LANGUAGE  LangTags  VersionChars
kineircd/install/: .cvsignore  example.conf.tpl  language.tpl
kineircd/src/ircd/: .cvsignore  bits.cpp  bits.h  ircd.cpp  options.def
kineircd/src/lib_clbp/: README
kineircd/src/lib_irc2/: README
kineircd/src/utils/: README  ircpasswd.cpp
languages/: README  en.lang  tr.lang
mod_http/src/module/: methods.def  protocol.cpp  protocol.h
remote/CVSROOT/: cvsignore  loginfo
remote/kineircd/autogen/: README  attributes.def  chanmembers.def  chanmodes.def  chantypes.def  config.def  config.tpl  errors.def  irc2numerics.def  language.def  language.tpl  logger.def  servermodes.def  usermodes.def  version.def
remote/kineircd/config/: README
remote/kineircd/contrib/: README  services
remote/kineircd/doc/: Exit_Numerics  LANGUAGE  LangTags  VersionChars
remote/kineircd/install/: .cvsignore  README  example.conf.tpl  language.tpl
remote/kineircd/src/ircd/: README  bits.cpp  exit.h  ircd.cpp  options.def
remote/kineircd/src/lib/: README
remote/kineircd/src/utils/: ircpasswd.cpp
remote/languages/: README  en.lang  tr.lang  x-hacker.lang
remote/mod_http/src/module/: module.cpp  protocolinfo.h  statuscodes.def
remote/www/: doxygen.conf
remote/www/htdocs/: index.html
www/: doxygen.conf  runjob
www/htdocs/: index.html
